fix: use collection utils for empty list